--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -23,20 +23,20 @@ body {
 .header h1 .seo {
     color: #d9dcd6;
 }
-
-.header div {
+/*changed div to nav*/
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
-.header div ul {
+/*changed div to nav*/
+.header nav ul {
     list-style-type: none;
 }
-
-.header div ul li {
+/*changed div to nav*/
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -49,7 +49,7 @@ a {
 p {
     font-size: 16px;
 }
-
+/* main image in css file*/
 .hero {
     height: 800px;
     width: 100%;
@@ -86,7 +86,7 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead{
+.benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -142,6 +142,7 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
+
 .online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
@@ -150,6 +151,7 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
+
 .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -158,8 +160,6 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
-
 
 .search-engine-optimization img {
     max-height: 200px;
